# OpenEnv-Hackathon

./: .dockerignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  engine.py  graders.py  implementation.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_endpoints.py
outputs/evals/: baseline_scores.json
scripts/: validate-submission.sh
server/: app.py  fragilechain_environment.py  requirements.txt
tasks/: task1_steady_state.json  task2_thermal_anomaly.json  task3_black_swan.json
