[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-fragilechain"
version = "0.1.0"
description = "Pharmaceutical cold-chain logistics environment for OpenEnv – simulates clinical trial supply management under thermal stress and mass-disruption events"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["openenv", "rl", "pharma", "supply-chain", "cold-chain", "clinical-trials"]

dependencies = [
    # OpenEnv core (from pip)
    "openenv-core[core]>=0.2.1",
    # Web server
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    # Data validation
    "pydantic>=2.0.0",
    # HTTP client
    "requests>=2.31.0",
    # OpenAI client for baseline
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["fragilechain", "fragilechain.server"]
package-dir = { "fragilechain" = ".", "fragilechain.server" = "server" }
